--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <button class="answerButton" onclick="location.href='thankyou.html'">Yes</button>
     <button class="answerButton" id="noButton">I no no wanna o(╥﹏╥)o</button>
     <br>
-    <img src ='cute.gif' alt = 'cute asking question' class="responsive">
+    <img src ='Cute.gif' alt = 'cute asking question' class="responsive">
 
     <script>
         document.getElementById('noButton').addEventListener('click', function() {
