--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             margin: 10px;
             font-family: 'courier';
             margin-bottom: 20px;
-            background-color:#FFE3E1;
+            background-color:#ffe3e3;
             color: #e67373;
             border-radius: 12px;
-            border: 2px solid #FFE3E1;
+            border: 2px solid #ffe3e3;
         }
     </style>
 </head>
