--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             text-align: center;
             margin-top: 30px;
             font-family: 'Courier';
-			background-color:\e[0;37m;
+			background-color:#FFF5E4;
             color: #FF9494;
         }
         #valentineQuestion {
