--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             margin-top: 30px;
             font-family: 'Courier';
 			background-color:#FFF5E4;
-            color: #FF9494;
+            color: \e[0;37m;
         }
         #valentineQuestion {
             font-size: 50px;
