--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
     <div id="valentineQuestion"><b>Will you be my valentine?</b></div>
     <button class="answerButton" onclick="location.href='thankyou.html'">Yes</button>
-    <button class="answerButton" id="noButton">I no no wanna o(╥﹏╥)o</button>
+    <button class="answerButton" id="noButton">Nooo ˙◠˙</button>
     <br>
     <img src ='Cute.gif' alt = 'cute asking question' class="responsive">
 
