--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
             text-align: center;
             margin-top: 30px;
             font-family: 'Courier';
-			background-color:#FFF5E4;
-            color: #FF9494;
+			background-color:#f8f9fa;
+            color: #ffe3e3;
         }
         #valentineQuestion {
             font-size: 50px;
