--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             text-align: center;
             margin-top: 30px;
             font-family: 'Courier';
-			background-color:\e[4;37m;
+			background-color:#FFF5E4;
             color: #ffe3e3;
         }
         #valentineQuestion {
