--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </style>
 </head>
 <body>
-    <div id="valentineQuestion"><b>Will you be my valentine?</b></div>
+    <div id="valentineQuestion"><b>Will You Be My Valentine?</b></div>
     <button class="answerButton" onclick="location.href='thankyou.html'">Yes</button>
     <button class="answerButton" id="noButton">Nooo ˙◠˙</button>
     <br>
