--- a/thankyou.html
+++ b/thankyou.html
@@ -36,7 +36,7 @@
 <body>
 	<div id="thankyou"><b>Thank you</b></div>
 
-	<img id = "rizz" src = 'rizz.gif' alt = "rizzler god" class="responsive">
+	<img id = "Licking" src = 'Licking.gif' alt = "Licking god" class="responsive">
 	<br>
     <audio controls autoplay>
 		<source src="congratulations.mp3" type="audio/mpeg">
