--- a/thankyou.html
+++ b/thankyou.html
@@ -9,8 +9,8 @@
             text-align: center;
             margin-top: 30px;
             font-family: 'Courier';
-            background-color:#FFF5E4;
-            color: #FF9494;
+            background-color:##ffc9c9;
+            color: #ffe3e3;
         }
 		#thankyou {
 			font-size: 50px;
