--- a/date.html
+++ b/date.html
@@ -9,8 +9,8 @@
             text-align: center;
             margin-top: 30px;
             font-family: 'Courier';
-            background-color:#FFF5E4;
-            color: #FF9494;
+            background-color:#ffc9c9;
+            color: #ffe3e3;
         }
 	h1 {
 		font-size: 40px;
@@ -30,8 +30,8 @@
             margin: 10px;
             font-family: 'courier';
             margin-bottom: 10px;
-            background-color:#FFE3E1;
-            color: #e67373;
+            background-color:#ffc9c9;
+            color: #ffe3e3;
             border-radius: 12px;
             border: 2px solid #FFE3E1;
         }
