--- a/date.html
+++ b/date.html
@@ -9,7 +9,7 @@
             text-align: center;
             margin-top: 30px;
             font-family: 'Courier';
-            background-color:#f8f9fa;
+            background-color:##ffc9c9;
             color: #ffe3e3;
         }
 	h1 {
