--- a/date.html
+++ b/date.html
@@ -38,7 +38,7 @@
 	</style>
 </head>
 <body>
-	<h1 title="choose a date">Are you free on ...</h1>
+	<h1 title="choose a date">Would you be available to spend time together on.. </h1>
 	<p>(select a date)</p>
 	<form action="/action_page.php" class="form-group">
 		<label>Which day: </label>
