--- a/date.html
+++ b/date.html
@@ -39,7 +39,7 @@
 </head>
 <body>
 	<h1 title="choose a date">Would you be available to spend time together on.. </h1>
-	<p>(select a date)</p>
+	<p>(Please select a date!)</p>
 	<form action="/action_page.php" class="form-group">
 		<label>Which day: </label>
 		<input type="date">
