--- a/food.html
+++ b/food.html
@@ -57,7 +57,7 @@
             <label><input type="checkbox" name="food" value="hotdog"> hotdog</label>
         </div>
         <div class="food-item">
-            <img src="food/koreanfood.jpeg" alt="koreanfood">
+            <img src="food/koreanfood.jpg" alt="koreanfood">
             <label><input type="checkbox" name="food" value="Korean food"> korean food</label>
         </div>
         <div class="food-item">
