--- a/food.html
+++ b/food.html
@@ -50,34 +50,34 @@
     <div class="food-selection">
         <div class="food-item">
             <img src="food/burgers.jpeg" alt="Burgers, fries and fried chicken">
-            <label><input type="checkbox" name="food" value="Burgers, fries and fried chicken"> burgers and fried chicken</label>
+            <label><input type="checkbox" name="food" value="Burgers, fries and fried chicken"> Burgers & Fried Chicken</label>
         </div>
         <div class="food-item">
             <img src="food/dog.jpeg" alt="dog">
-            <label><input type="checkbox" name="food" value="hotdog"> hotdog</label>
+            <label><input type="checkbox" name="food" value="Hotdog"> hotdog</label>
         </div>
         <div class="food-item">
-            <img src="food/koreanfood.jpg" alt="koreanfood">
+            <img src="food/koreanfood.jpg" alt="Koreanfood">
             <label><input type="checkbox" name="food" value="Korean food"> korean food</label>
         </div>
         <div class="food-item">
-            <img src="food/pasta.jpeg" alt="pasta">
+            <img src="food/pasta.jpg" alt="pasta">
             <label><input type="checkbox" name="food" value="pasta"> pasta</label>
         </div>
         <div class="food-item">
-            <img src="food/pizza.jpeg" alt="pizza">
+            <img src="food/pizza.jpg" alt="pizza">
             <label><input type="checkbox" name="food" value="pizza"> pizza</label>
         </div>
         <div class="food-item">
-            <img src="food/salad.jpeg" alt="salad">
+            <img src="food/salad.jpg" alt="salad">
             <label><input type="checkbox" name="food" value="salad"> salad</label>
         </div>
         <div class="food-item">
-            <img src="food/steak.jpeg" alt="steak">
+            <img src="food/steak.jpg" alt="steak">
             <label><input type="checkbox" name="food" value="steak"> steak</label>
         </div>
         <div class="food-item">
-            <img src="food/sushi.jpeg" alt="sushi">
+            <img src="food/sushi.jpg" alt="sushi">
             <label><input type="checkbox" name="food" value="sushi"> sushi</label>
         </div>
     </div>
