--- a/food.html
+++ b/food.html
@@ -54,31 +54,31 @@
         </div>
         <div class="food-item">
             <img src="food/dog.jpeg" alt="dog">
-            <label><input type="checkbox" name="food" value="Hotdog"> hotdog</label>
+            <label><input type="checkbox" name="food" value="Hotdog"> Hotdog</label>
         </div>
         <div class="food-item">
             <img src="food/koreanfood.jpg" alt="Koreanfood">
-            <label><input type="checkbox" name="food" value="Korean food"> korean food</label>
+            <label><input type="checkbox" name="food" value="Korean food"> Korean food</label>
         </div>
         <div class="food-item">
             <img src="food/pasta.jpg" alt="pasta">
-            <label><input type="checkbox" name="food" value="pasta"> pasta</label>
+            <label><input type="checkbox" name="food" value="pasta"> Pasta</label>
         </div>
         <div class="food-item">
             <img src="food/pizza.jpg" alt="pizza">
-            <label><input type="checkbox" name="food" value="pizza"> pizza</label>
+            <label><input type="checkbox" name="food" value="pizza"> Pizza</label>
         </div>
         <div class="food-item">
             <img src="food/salad.jpg" alt="salad">
-            <label><input type="checkbox" name="food" value="salad"> salad</label>
+            <label><input type="checkbox" name="food" value="salad"> Salad</label>
         </div>
         <div class="food-item">
             <img src="food/steak.jpg" alt="steak">
-            <label><input type="checkbox" name="food" value="steak"> steak</label>
+            <label><input type="checkbox" name="food" value="steak"> Steak</label>
         </div>
         <div class="food-item">
             <img src="food/sushi.jpg" alt="sushi">
-            <label><input type="checkbox" name="food" value="sushi"> sushi</label>
+            <label><input type="checkbox" name="food" value="sushi"> Sushi</label>
         </div>
     </div>
     <button class ="button"onclick="location.href='dessert.html'">Continue UWU</button>
