--- a/food.html
+++ b/food.html
@@ -10,7 +10,7 @@
             margin-top: 30px;
             font-family: 'Courier';
             background-color:##ffc9c9;
-            color: #FF9494;
+            color: #ffe3e3;
         }
         #foodquestion {
             font-size: 50px;
