--- a/food.html
+++ b/food.html
@@ -81,7 +81,7 @@
             <label><input type="checkbox" name="food" value="sushi"> Sushi</label>
         </div>
     </div>
-    <button class ="button"onclick="location.href='dessert.html'">Continue UWU</button>
+    <button class ="button"onclick="location.href='dessert.html'">CLICK HERE TO PROCEED!?</button>
     
 </body>
 </html>
