--- a/thankyou.html
+++ b/thankyou.html
@@ -42,7 +42,7 @@
 		<source src="congratulations.mp3" type="audio/mpeg">
 		Your browser does not support the audio element.
 	</audio>
-	<p>Don't go yet!</p>
+	<p>Please dont leave me!</p>
 	<button class="button" onclick="location.href='date.html'"> CLICK ME PLS</button>
 </body>
 </html>
