--- a/dessert.html
+++ b/dessert.html
@@ -9,8 +9,8 @@
 			text-align: center;
 			margin-top: 30px;
 			font-family: courier;
-			background-color: #FFF5E4;
-			color: #FF9494;
+			background-color: ##ffc9c9;
+			color: #ffe3e3;
 		}
 		#dessertquestion {
 			font-size: 50px;
@@ -46,35 +46,35 @@
 	</style>
 </head>
 <body>
-	<div id = "dessertquestion"> Which dessert we eatin cuh </div>
+	<div id = "dessertquestion"> Which dessert we eating?</div>
 	
 	<div class = "dessert-selection">
 		<div class = "dessert-item">
-			<img src = "food/boba.jpeg" alt ="boba">
-			<label><input type="checkbox" name="dessert" value="boba"> boba</label>
+			<img src = "food/boba.jpg" alt ="boba">
+			<label><input type="checkbox" name="dessert" value="Boba"> Boba</label>
 		</div>	
 		<div class = "dessert-item">
-			<img src = "food/churro.jpeg" alt ="churro">
-			<label><input type="checkbox" name="dessert" value="churro"> churro</label>
+			<img src = "food/acai.jpg" alt ="churro">
+			<label><input type="checkbox" name="dessert" value="Acai"> Acai</label>
 		</div>	
 		<div class = "dessert-item">
-			<img src = "food/che.jpeg" alt ="che">
-			<label><input type="checkbox" name="dessert" value="che"> che</label>
+			<img src = "food/bingsu.jpg" alt ="che">
+			<label><input type="checkbox" name="dessert" value="che"> Bingsu</label>
 		</div>	
 		<div class = "dessert-item">
-			<img src = "food/mochi.jpeg" alt ="mochi">
-			<label><input type="checkbox" name="dessert" value="mochi"> mochi</label>
+			<img src = "food/froyo.jpg" alt ="mochi">
+			<label><input type="checkbox" name="dessert" value="Froyo"> Froyo</label>
 		</div>	
 		<div class = "dessert-item">
-			<img src = "food/randombun.jpeg" alt ="randombun">
-			<label><input type="checkbox" name="dessert" value="randombun"> random bun</label>
+			<img src = "food/gelato.jpg" alt ="gelato">
+			<label><input type="checkbox" name="dessert" value="Gelato"> Gelato</label>
 		</div>	
 		<div class = "dessert-item">
-			<img src = "food/taiyaki.jpeg" alt ="taiyaki">
-			<label><input type="checkbox" name="dessert" value="taiyaki"> taiyaki</label>
+			<img src = "food/meetfresh.jpg" alt ="Che">
+			<label><input type="checkbox" name="dessert" value="Che"> Che</label>
 		</div>	
 	</div>
-	<button class = "button" onclick="location.href='activities.html'">Continue UWU</button>
+	<button class = "button" onclick="location.href='activities.html'">CLICK TO PROCEED AGAIN!?</button>
 
 </body>
 </html>
