--- a/dessert.html
+++ b/dessert.html
@@ -50,7 +50,7 @@
 	
 	<div class = "dessert-selection">
 		<div class = "dessert-item">
-			<img src = "food/boba.jpg" alt ="boba">
+			<img src = "food/boba.avif" alt ="boba">
 			<label><input type="checkbox" name="dessert" value="Boba"> Boba</label>
 		</div>	
 		<div class = "dessert-item">
