--- a/activities.html
+++ b/activities.html
@@ -9,8 +9,8 @@
 			text-align: center;
             margin-top: 30px;
             font-family: 'Courier';
-            background-color:#FFF5E4;
-            color: #FF9494;
+            background-color:##ffc9c9;
+            color: #ffe3e3;
 		}
 		#activityquestion {
 			font-size: 50px;
@@ -49,28 +49,28 @@
 	</div>
 	<div class = "activities-selection">
 		<div class="activity-item">
-			<img src="activities/aquarium.jpeg" alt ="aquarium">
-			<label><input type="checkbox" name="activities" value ="aquarium">aquarium</label>
+			<img src="activities/aquarium.jpg" alt ="Aquarium">
+			<label><input type="checkbox" name="activities" value ="Aquarium">Aquarium</label>
 		</div>
 		<div class="activity-item">
-			<img src="activities/arcade.jpeg" alt ="arcade">
-			<label><input type="checkbox" name="activities" value ="arcade">arcade</label>
+			<img src="activities/gallery.jpg" alt ="Gallery">
+			<label><input type="checkbox" name="activities" value ="Gallery">Gallery</label>
 		</div>
 		<div class="activity-item">
-			<img src="activities/cinema.jpeg" alt ="cinema">
-			<label><input type="checkbox" name="activities" value ="cinema">cinema</label>
+			<img src="activities/cinema.jpeg" alt ="Cinema">
+			<label><input type="checkbox" name="activities" value ="Cinema">Cinema</label>
 		</div>
 		<div class="activity-item">
-			<img src="activities/keramika.jpeg" alt ="ceramics">
-			<label><input type="checkbox" name="activities" value ="ceramics">ceramics</label>
+			<img src="activities/hiking.jpg" alt ="Hiking">
+			<label><input type="checkbox" name="activities" value ="Hiking">Hiking</label>
 		</div>
 		<div class="activity-item">
-			<img src="activities/kunsthalle.jpeg" alt ="kunsthalle">
-			<label><input type="checkbox" name="activities" value ="kunsthalle">exhibition</label>
+			<img src="activities/iceskating.jpg" alt ="Ice skating">
+			<label><input type="checkbox" name="activities" value ="Ice Skating">Ice Skating</label>
 		</div>
 		<div class="activity-item">
-			<img src="activities/park.jpeg" alt ="park.jpeg">
-			<label><input type="checkbox" name="activities" value ="park.jpeg">park</label>
+			<img src="activities/markets.jpg" alt ="Markets">
+			<label><input type="checkbox" name="activities" value ="Markets">Markets</label>
 		</div>
 	</div>
 	<button class = "button" onclick="location.href='lastpage.html'">Last page</button>
