--- a/lastpage.html
+++ b/lastpage.html
@@ -4,10 +4,17 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-		<link rel="stylesheet" href="flowerbloom.css">
+		<link rel="stylesheet" href="flower.css">
 </head>
 <body>
-	<div id="thankyou"><b>Thank you for being my girlfriend</b></div>
+	<div id="thankyou"><b>Hi Princess,
+
+I'm really sorry I can't be there with you this Valentine's Day. The distance sucks, but please know it doesn't change how much I care about you. I'll make it up to you when we're together again.
+
+Happy Valentine's Day, love.
+
+[Stinky farty pantx
+ps ]Thank you for being my girlfriend</b></div>
 	<div class="flower">
         <div class="f-wrapper">
             <div class="flower__line"></div>
