--- a/lastpage.html
+++ b/lastpage.html
@@ -8,13 +8,14 @@
 </head>
 <body>
 	<div id="thankyou"><b>Hi Princess,
-
+<br>
 I'm really sorry I can't be there with you this Valentine's Day. The distance sucks, but please know it doesn't change how much I care about you. I'll make it up to you when we're together again.
-
+<br>
 Happy Valentine's Day, love.
-
-[Stinky farty pantx
-ps ]Thank you for being my girlfriend</b></div>
+<br>
+Stinky farty pantx
+PS Thank you for being my girlfriend</b></div>
+<br>
 	<div class="flower">
         <div class="f-wrapper">
             <div class="flower__line"></div>
