--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             margin: 10px;
             font-family: 'courier';
             margin-bottom: 20px;
-            background-color:##ffc9c9;
+            background-color:#ffe3e3;
             color: #e67373;
             border-radius: 12px;
             border: 2px solid #ffe3e3;
